# flask_htmx

./: .flaskenv  README.md  pyproject.toml
src/flaskhtmx/: __init__.py
src/flaskhtmx/templates/: base.html  feed.html  icons.jinja2
src/flaskhtmx/templates/partials/: add_feed.html  entry.html  entry_page.html
