[project]
name = "flaskhtmx"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Vinzzztty", email = "kevinarnandes21@gmail.com" }
]
dependencies = [
    "flask[dotenv]>=3.0.2",
    "jinja-partials>=0.2.0",
    "feedparser>=6.0.11",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/flaskhtmx"]
